# morning_coffee

./: CMakeLists.txt  README.md  appicon.rc
.github/workflows/: build.yml
assets/: resources.qrc
src/: main.cpp
src/classes/: AddSourceWidget.cpp  AddSourceWidget.h  Button.cpp  Button.h  ClickableLabel.cpp  ClickableLabel.h  DatabaseManager.cpp  DatabaseManager.h  DefaultWidget.cpp  DefaultWidget.h  FormMessage.cpp  FormMessage.h  LambdaWorker.cpp  LambdaWorker.h  MainWindow.cpp  MainWindow.h  ManageSourcesWidget.cpp  ManageSourcesWidget.h  MenuBar.cpp  MenuBar.h  Spinner.cpp  Spinner.h  TutorialDialog.cpp  TutorialDialog.h  ViewNewBlogsWidget.cpp  ViewNewBlogsWidget.h  ViewNewPatreonsWidget.cpp  ViewNewPatreonsWidget.h  ViewNewVideosWidget.cpp  ViewNewVideosWidget.h  ViewSummaryWidget.cpp  ViewSummaryWidget.h
src/components/: MainWindow.h
src/constants/: Colours.h  FontSizes.h  Sizes.h
src/functions/: ManageColours.cpp  ManageColours.h  SecurityHelper.cpp  SecurityHelper.h  WidgetHelper.cpp  WidgetHelper.h
src/types/: Content.h  Source.h
